# nRF52_Nucleo_uart

./: .gitignore  README.md
Nucleo401/: Cargo.toml  README.md
Nucleo401/.cargo/: config.toml
Nucleo401/src/: lib.rs
Nucleo401/testsuite/: Cargo.toml
Nucleo401/testsuite/src/: lib.rs
Nucleo401/testsuite/tests/: test.rs
nRF52/: Cargo.toml  README.md
nRF52/.cargo/: config.toml
nRF52/src/: lib.rs
nRF52/testsuite/: Cargo.toml
nRF52/testsuite/src/: lib.rs
nRF52/testsuite/tests/: test.rs
