[package]
authors = ["aissata <aimaiga2@gmail.com>"]
edition = "2018"
name = "nrfie"
version = "0.1.0"
[dependencies]
cortex-m = "0.7.4"
cortex-m-rtic = "1"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = "0.2.7"
fugit = "0.3.5"
nrf52840-hal = "0.14.1"
postcard = "0.7.2"
rtic-monotonic = "1"

[dependencies.panic-probe]
features = ["print-defmt"]
version = "0.3.0"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.127"

[profile]
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
embedded_hal = "0.2.7"
incremental = false
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[workspace]
members = ["testsuite"]


# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
